kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-hw3-service
spec:
  selector:
    app: devops-hw3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
