kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-hw3-ingress
  namespace: devops-hw3
spec:
  rules:
  - host: devops-hw3.ade0n.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-hw3-service
            port:
              number: 80
